2015-11-18  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pyx (ConvolutionalNetwork.backpropagate):
	in np.where condition > -1.

	* deepnl/networkconv.pyx (ConvolutionalNetwork.backpropagate): use
	MultiMarginCriterion
	in np.where condition > -1.

	* deepnl/classifier.pyx (Classifier.predict: use argmax(vars.output)

2015-11-04  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pyx (Network.backpropagate): grads.hiddenx_bias
	instead of vars.hidden_bias.

2015-10-14  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/dl-sentiwords.py (main): pass minOccurr and vocab_size to reader.create_vocabulary.

2015-10-08  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkseq.pyx (SeqParameters.initialize): put back high to 1.0.

2015-10-07  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainerconv.pyx (ConvTrainer): holds a Classifier, which
	saves to file after training.

	* deepnl/utils.py (import_class): added.

2015-10-05  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/sentiwords.pyx (SentimentTrainer._train_pair_s): compute
	also grads.input.

2015-10-04  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/tagger.pyx (Tagger.tag_sequence): return list of tags.

	* deepnl/extractors.pyx (save): save also fields and use them in load.

	* bin/dl-ner.py (main): pass whole tokens to tagger.

	* deepnl/networkseq.pyx (_viterbi): preallocate prev_score_and_trans.

	* deepnl/word_dictionary.py (WordDictionary.__setitem__): do not
	insert normalized word if already present.

2015-10-02  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkseq.pyx (SeqParameters.initialize): high = 0.01

2015-10-01  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pyx (Variables.addSquare): moved here from Gradients.

	* deepnl/trainer.pyx (Trainer): turned adaEps, adaRo etc. into
	Trainer attributes.

2015-09-29  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pxd: use int32 instead of int64 which is weird